# SpatialRay

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml
perf/cloud/: __main__.py  _stage_runner.py  bootstrap.sh  config.yaml  harness.py  launch.py  metrics.py  onbox.py  pipeline.py  utils.py
perf/cluster/: __main__.py
perf/common/: harness.py  measure.py  report.py  trace.py
perf/common/models/: __init__.py  prithvi_eo_v1_100m.py  sample_vit_small.py
perf/preprocess/: __main__.py  report.py
perf/serve/: __main__.py
perf/serve/models/: __init__.py  sample_vit_small.py
src/spatial_ray/serve/: deployments.py  graph.py  messages.py  serve_config.py
src/spatial_ray/workload/: __init__.py  catalog.py  cost.py  metadata.py  profiler.py  stages.py  trace.py
src/spatial_ray/workload/stages/: __init__.py  decode.py  transform.py
tests/common/: test_trace.py
tests/serve/: test_deployments.py  test_graph.py  test_messages.py  test_serve_config.py
tests/workload/: test_catalog.py  test_cost.py  test_metadata.py  test_profiler.py  test_stages.py  test_trace.py
