[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-ray"
version = "0.0.1"
description = "An adaptive serving framework for geospatial ML"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pranav Walimbe" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/pranav-walimbe/SpatialRay"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_ray"]
