[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-ray"
version = "0.0.2"
description = "Adaptive inference serving framework for geospatial ML"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pranav Walimbe" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "rasterio>=1.3",
    "pystac-client>=0.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
serve = [
    "ray[serve]>=2.9",
    "torch>=2.2",
]
perf = [
    "spatial-ray[serve]",
    "huggingface-hub>=0.20",
    "timm>=1.0",
    "einops>=0.7",
    "psutil>=5.9",
]
cloud = [
    "boto3>=1.34",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/pranav-walimbe/SpatialRay"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_ray"]

[tool.pytest.ini_options]
# perf is not an installed package, so put the repo root on the path for its tests
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "D"]
ignore = ["D100", "D101", "D104", "D105", "D106", "D107", "D200", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"
